Spacing fix issue resolved

--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -1,4 +1,5 @@
 .footercss{
     background-color: #032a62;
     color: white;
+    justify-content: center;
 }
